unpackaged/main/default/objects/Fundraising__c/Fundraising__c.object-meta.xml
<CustomObject>
    <label>Fundraising</label>
    <nameField>
        <label>Fundraising Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fundraisings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>