unpackaged/main/default/objects/Fundraising__c/fields/Closing__c.field-meta.xml
<CustomField>
    <fullName>Closing__c</fullName>
    <label>Closing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st Closing</fullName>
            </value>
            <value>
                <fullName>2nd Closing</fullName>
            </value>
            <value>
                <fullName>3rd Closing</fullName>
            </value>
            <value>
                <fullName>4th Closing</fullName>
            </value>
            <value>
                <fullName>5th Closing</fullName>
            </value>
            <value>
                <fullName>6th Closing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>