unpackaged/main/default/objects/Fundraising__c/fields/Fund_Name__c.field-meta.xml
<CustomField>
    <fullName>Fund_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund Name</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipName>Fundraising</relationshipName>
    <type>Lookup</type>
</CustomField>