unpackaged/main/default/objects/Fundraising__c/fields/Investment_Likely_Amount_USD_mn__c.field-meta.xml
<CustomField>
    <fullName>Investment_Likely_Amount_USD_mn__c</fullName>
    <label>Investment Likely Amount (mn)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>