unpackaged/main/default/objects/Fundraising__c/fields/Investment_Low_Amount_USD_mn__c.field-meta.xml
<CustomField>
    <fullName>Investment_Low_Amount_USD_mn__c</fullName>
    <label>Investment Low Amount (mn)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>