unpackaged/main/default/objects/Fundraising__c/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fundraisings</relationshipLabel>
    <relationshipName>Fundraising</relationshipName>
    <type>Lookup</type>
</CustomField>