unpackaged/main/default/objects/Fundraising__c/fields/Potential_Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>Potential_Management_Fee__c</fullName>
    <label>Potential Management Fee%</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>