unpackaged/main/default/objects/Fundraising__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Sent PPM</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Initial Meeting</fullName>
            </value>
            <value>
                <fullName>Second Meeting</fullName>
            </value>
            <value>
                <fullName>Follow up Diligence</fullName>
            </value>
            <value>
                <fullName>Soft Circle</fullName>
            </value>
            <value>
                <fullName>Verbal Commitment</fullName>
            </value>
            <value>
                <fullName>Legal Closed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>