unpackaged/main/default/objects/Fundraising__c/fields/Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Status_Notes__c</fullName>
    <label>Status Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>