unpackaged/main/default/objects/Fundraising__c/fields/Total_Fundraising_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Total_Fundraising_Contacts__c</fullName>
    <label>Total Fundraising Contacts</label>
    <summaryForeignKey>Fundraising_Contact__c.Fundraising__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>