unpackaged/main/default/objects/Fundraising__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fund_Name__c</columns>
    <columns>Legal_Name__c</columns>
    <columns>Portfolio_Company__c</columns>
    <columns>Stage__c</columns>
    <columns>Investment_Low_Amount_USD_mn__c</columns>
    <columns>Investment_High_Amount_USD_mn__c</columns>
    <columns>Investment_Likely_Amount_USD_mn__c</columns>
    <columns>Closing__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>