unpackaged/main/default/objects/Fundraising__c/listViews/Fundraising_Pipeline.listView-meta.xml
<ListView>
    <fullName>Fundraising_Pipeline</fullName>
    <columns>NAME</columns>
    <columns>Legal_Name__c</columns>
    <columns>Stage__c</columns>
    <columns>Status_Notes__c</columns>
    <columns>Closing__c</columns>
    <columns>Target_Close_Date__c</columns>
    <columns>Investment_Likely_Amount_USD_mn__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Legal Closed,Declined</value>
    </filters>
    <label>Fundraising Pipeline</label>
</ListView>