unpackaged/main/default/objects/Fundraising__c/listViews/Investor_Commitments.listView-meta.xml
<ListView>
    <fullName>Investor_Commitments</fullName>
    <columns>NAME</columns>
    <columns>Investment_Likely_Amount_USD_mn__c</columns>
    <columns>Target_Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Legal Closed</value>
    </filters>
    <label>Investor Commitments</label>
</ListView>